--- a/Problem Set 1/PS1.tex
+++ b/Problem Set 1/PS1.tex
@@ -52,6 +52,7 @@
 \title{6.036: Machine Learning}
 \author{
   Ryan Lacey <rlacey@mit.edu>\\
+  \footnotesize \texttt{Collaborator(s): Jorge Perez, Amruth Venkatraman}
 }
         
 \maketitle
@@ -68,7 +69,7 @@
 		        \begin{itemize}
 		          \item Spread the points out over a large area, thereby increasing $R$.
 		          \item Assign labels to points in a manner that minimizes the margin between differently labeled points, thereby reducing $\gamma$. 
-		          \item Traverse the points in order from further from the origin to nearest. This will cause the large magnitude vectors to have a strong influence at the beginning of the algorithm making the boundary line jump. Then the near vectors, which have much less of an effect on $\theta$ due to their comparably small magnitude, will have difficultly in nudging the decision boundary to an acceptable position, ideally causing further iterations of the algorithm.
+		          \item Traverse the points in order from nearest to the origin to furthest. Smaller magnitude vectors will require more mistakes to be made in order to converge to a decision boundary because of their small incremental progress.
 		        \end{itemize}
 	\end{enumerate}
 
@@ -125,10 +126,20 @@
 		  $A = \left[ \begin{smallmatrix} 
 		       \frac{1}{6} & \frac{1}{6} & \frac{1}{6} & \frac{1}{6} & \frac{1}{6} & \frac{1}{6}\\
 		       \frac{1}{3} & \frac{1}{3} & \frac{1}{3} &-\frac{1}{3} &-\frac{1}{3} &-\frac{1}{3} \end{smallmatrix} \right]$
-	\item placeholderB
-	\item placeholderC
-	\item placeholderD
-	\item placeholderE
+	\item 
+		  Yes, given a good $\theta_z$ one can find an equivalent $\theta_x$.
+		  \newline\newline
+		  Classifier in $z$-space $y^{(i)}\left(\theta_z z^{(i)}\right) > 0$ becomes $y^{(i)}\left(\theta_z A x^{(i)}\right) > 0$.
+		  \newline\newline
+		  We desire the $\theta_x$, which must equal $\theta_z A$ from the above equation, which gives the familiar $y^{(i)}\left(\theta_x x^{(i)}\right) > 0$.
+	\item 
+		  No, there will not necessarily always be a $\theta_z$ that will identically classify all the $z$'s. It will only hold when $A$ is invertible.
+		  \newline\newline
+		  Classifier $y^{(i)}\left(\theta_x x^{(i)}\right) > 0$ becomes $y^{(i)}\left(\theta_x A^{-1} z^{(i)}\right) > 0$ which requires A to be invertible. 
+	\item 
+		  Yes, the algorithm can converge more quickly in $z$-space. Take the situation in which one feature is enough to classify the data. Then the goal is only to converge over this feature rather than a large dimensional vector, which should require less iterations of the algorithm.
+	\item 
+		  No, one cannot find a more accurate classifier in $z$-space on the training data because you have at best the same amount of information to train on as you would in $x$-space. You could have overtraining on the training data, however, in which case the classifier in $z$-space could outperform the classifier in $x$-space on test data.
 	\end{enumerate}
 
 \bigskip
